# Jetson_car

./: CMakeLists.txt  mynteye_demo.cc  readme.txt
lib/seriallib/: CMakeLists.txt  serial_port.cpp  serial_port.h
